# cleanpdf

./: Makefile  Pipfile  README.md  install_menu.py  pyproject.toml  requirements.txt  setup.py
cleanpdf/: __init__.py  main.py
