[tool.poetry]
name = "cleanpdf"
version = "0.1.0"
description = ""
authors = ["'Zhou <lilaboc.cn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.3.0"
pdf2image = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
cleanpdf = "cleanpdf:main"
combinepdf = "cleanpdf:combine"
