[project]
name = "cleanpdf"
version = "0.1.0"
description = ""
authors = [
    {name = "'Zhou", email = "lilaboc.cn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.3.0",
    "pdf2image>=1.17.0",
    "numpy>=1.26.4",
]

[project.scripts]
cleanpdf = "cleanpdf:main"
combinepdf = "cleanpdf:combine"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
